# swap_layer

./: CHANGELOG.md  DOCUMENTATION_STRUCTURE.md  IMPLEMENTATION_SUMMARY.md  MCP_COVERAGE_ANALYSIS.md  MCP_VALUE_ANALYSIS.md  README.md  RELEASE_NOTES_v1.0.0-rc1.md  config.py  pyproject.toml  update_tests.py
.github/: copilot-instructions.md
.github/workflows/: publish.yml  tests.yaml
docs/: IDENTITY_ARCHITECTURE.md  README.md  architecture.md  email.md  identity-management-complete.md  llm-agents.md  mcp-config-example.json  mcp.md  sms.md  storage.md
docs/development/: AGENT_PROMPTS.md  contributing.md
docs/development/archive/: DEVELOPER_EXPERIENCE.md  DOCUMENTATION_CLEANUP_JAN_2026.md  DOCUMENTATION_RESTRUCTURE_JAN_2026.md  ERROR_SYSTEM.md  ERROR_SYSTEM_COMPLETE.md  ISSUES_FOUND_AND_FIXED.md  MODULE_STANDARDIZATION.md  PHASE_1_COMPLETE.md  PRODUCTION_READINESS.md  PRODUCTION_RELEASE_STATUS.md  SETTINGS_BENEFITS.md  SETTINGS_MANAGEMENT.md
email/: __init__.py  factory.py
email/providers/: django_email.py  mailgun.py  sendgrid.py  ses.py
examples/: auth0_usage_example.py  identity_management_modular.py
identity/platform/: apps.py
identity/verification/: adapter.py  apps.py  factory.py
identity/verification/providers/: stripe.py
infrastructure/: ABSTRACTIONS_OVERVIEW.md  README.md
infrastructure/email/: ARCHITECTURE_COMPARISON.md  EMAIL_ABSTRACTION_SUMMARY.md  README.md  __init__.py  adapter.py  apps.py
infrastructure/email/providers/: sendgrid.py
infrastructure/identity/platform/: DECISION_RECORD.md  adapter.py  factory.py  models.py
infrastructure/identity/verification/: README.md  __init__.py  adapter.py  apps.py  factory.py  models.py  schemas.py
infrastructure/localization/: __init__.py  countries.py  geolocation.py
infrastructure/payments/: ARCHITECTURE_COMPARISON.md  MIGRATION_GUIDE.md  __init__.py  adapter.py  apps.py
infrastructure/payments/providers/: __init__.py
infrastructure/sms/: apps.py
infrastructure/sms/providers/: sns.py  twilio_sms.py
infrastructure/storage/: README.md  apps.py  factory.py
infrastructure/storage/providers/: __init__.py  azure.py  gcs.py  s3.py
infrastructure/tests/: test_email.py  test_identity_verification.py  test_payments.py
payments/: apps.py  factory.py
payments/providers/: stripe.py
sms/: README.md  factory.py
sms/providers/: __init__.py  sns.py
src/swap_layer/: __init__.py  config.py  exceptions.py  http.py  settings.py
src/swap_layer/billing/: __init__.py  adapter.py  admin.py  apps.py  factory.py  models.py
src/swap_layer/communications/: __init__.py
src/swap_layer/email/: ARCHITECTURE_COMPARISON.md  EMAIL_ABSTRACTION_SUMMARY.md  GUIDE.md  README.md  admin.py  apps.py  factory.py
src/swap_layer/mcp/: README.md  __init__.py  __main__.py  server.py
src/swap_layer/payments/: ARCHITECTURE_COMPARISON.md  GUIDE.md  MIGRATION_GUIDE.md  README.md  __init__.py  adapter.py  adapter.py.bak  admin.py  apps.py  factory.py  models.py
src/swap_layer/sms/: README.md  __init__.py  adapter.py  admin.py
src/swap_layer/storage/: README.md  __init__.py  adapter.py  admin.py  (+4 more)
storage/: __init__.py
storage/providers/: azure.py  django_storage.py  gcs.py  local.py  s3.py
tests/: conftest.py  test_billing.py  test_email.py  test_error_system.py  test_factory_uses_swaplayer_settings.py  test_identity_platform.py  test_identity_verification.py  test_import_without_django.py  test_mcp.py  test_optional_dependencies.py  test_payments.py  test_settings.py  test_sms.py  test_storage.py  test_unified.py
(+93 files in other folders)
