[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swap-layer"
version = "0.1.0"
description = "The Anti-Vendor-Lock-in Framework for Django. One Interface. Any Provider."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Alex C", email = "alex@coded.uk" },
]
classifiers = [
  "Framework :: Django",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "Django>=4.2",
]

[project.optional-dependencies]
stripe = ["stripe>=5.0.0"]
aws = ["boto3>=1.26.0", "django-storages[s3]>=1.13"]
azure = ["azure-storage-blob>=12.0.0", "django-storages[azure]>=1.13"]
email = ["django-anymail>=10.0"]
all = [
  "stripe>=5.0.0",
  "boto3>=1.26.0",
  "django-storages[s3,azure]>=1.13",
  "django-anymail>=10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["infrastructure"]
