[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/swap_layer"]

[project]
name = "SwapLayer"
version = "0.1.0"
description = "Swap providers with zero vendor lock-in. For Django SaaS."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Alex C", email = "alex@coded.uk" },
]
classifiers = [
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Intended Audience :: Developers",
]
dependencies = [
  "Django>=4.2",
  "pydantic>=2.0.0",
]

[project.optional-dependencies]
stripe = ["stripe>=5.0.0"]
aws = ["boto3>=1.26.0", "django-storages[s3]>=1.13"]
azure = ["azure-storage-blob>=12.0.0", "django-storages[azure]>=1.13"]
email = ["django-anymail>=10.0"]
sms = ["twilio>=8.0.0"]
identity = ["workos-python>=4.0.0", "Authlib>=1.3.0"]
all = [
  "stripe>=5.0.0",
  "boto3>=1.26.0",
  "django-storages[s3,azure]>=1.13",
  "django-anymail>=10.0",
  "twilio>=8.0.0",
  "workos-python>=4.0.0",
  "Authlib>=1.3.0",
]
